# just-transcribe

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
electron/: package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
electron/src/main/: index.ts  python.ts  setup.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx  index.html
electron/src/renderer/assets/: main.css
electron/src/renderer/components/: Controls.tsx  Settings.tsx  Setup.tsx  Transcript.tsx
electron/src/renderer/hooks/: useBackend.ts  useTranscript.ts
openspec/changes/archive/2026-04-05-realtime-transcribe-v1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-remote-asr-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-ship-installable-app/: design.md  tasks.md
openspec/changes/archive/2026-04-06-migrate-to-mlx-audio/: design.md  proposal.md  (+1 more)
openspec/changes/ship-installable-app/: proposal.md  tasks.md
openspec/specs/app-config/: spec.md
openspec/specs/app-packaging/: spec.md
openspec/specs/electron-shell/: spec.md
openspec/specs/remote-asr/: spec.md
openspec/specs/setup-guide/: spec.md
openspec/specs/transcription-pipeline/: spec.md
openspec/specs/translation/: spec.md
openspec/specs/uninstall/: spec.md
python/: pyproject.toml
python/src/just_transcribe/: __init__.py  __main__.py  config.py  server.py
python/src/just_transcribe/audio/: mic.py  speaker.py  stream.py
python/src/just_transcribe/pipeline/: asr.py  asr_remote.py  orchestrator.py  translate.py  vad.py
(+14 files in other folders)
